--- a/arduino/button_esp8266_12E/platformio.ini
+++ b/arduino/button_esp8266_12E/platformio.ini
@@ -14,5 +14,5 @@ board = esp12e
 framework = arduino
 lib_deps = 
 	bblanchon/ArduinoJson@^7.4.1
-	knolleary/PubSubClient@^2.8
+	heman/AsyncMqttClient-esphome@^2.1.0
 lib_extra_dirs = ../lib/Mqtt
