--- a/arduino/aquarium_esp8266_12E/platformio.ini
+++ b/arduino/aquarium_esp8266_12E/platformio.ini
@@ -12,4 +12,7 @@
 platform = espressif8266
 board = esp12e
 framework = arduino
-lib_deps = bblanchon/ArduinoJson@^7.4.1
+lib_deps = 
+	bblanchon/ArduinoJson@^7.4.1
+	heman/AsyncMqttClient-esphome@^2.1.0
+lib_extra_dirs = ../lib/Mqtt
