--- a/arduino/gate_esp8266_12E/.vscode/settings.json
+++ b/arduino/gate_esp8266_12E/.vscode/settings.json
@@ -1,6 +1,15 @@
 {
   "files.associations": {
-    "system_error": "cpp"
+    "system_error": "cpp",
+    "array": "cpp",
+    "deque": "cpp",
+    "list": "cpp",
+    "string": "cpp",
+    "unordered_map": "cpp",
+    "vector": "cpp",
+    "string_view": "cpp",
+    "initializer_list": "cpp",
+    "ranges": "cpp"
   },
   "C_Cpp.errorSquiggles": "disabled"
 }
