--- a/arduino/lamp_esp8266_12E/platformio.ini
+++ b/arduino/lamp_esp8266_12E/platformio.ini
@@ -14,4 +14,6 @@ board = esp12e
 framework = arduino
 lib_deps = 
 	bblanchon/ArduinoJson@^7.4.1
+	heman/AsyncMqttClient-esphome@^2.1.0
 	adafruit/Adafruit PWM Servo Driver Library@^3.0.2
+lib_extra_dirs = ../lib/Mqtt
